# colorado-river-basin-weather

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  LICENSE  Makefile  PROJECT_MAP.md  README.md  REMOTE_RUN_MANIFEST.md  REMOTE_TRANSFER_CHECKLIST.md  REVIEWING.md  pyproject.toml
C++_Weather_Station_Proxy_Engine/: README.md  STATION_PROXY_ENGINE.cpp  STATION_PROXY_ENGINE.h  api_main.cpp  csv_filereader.cpp  csv_filereader.h  data_processing_goals.txt  engine_unit_tests.cpp  main.cpp  python_bindings.cpp  seasonal_analysis.cpp  seasonal_analysis.h  similarity_scores.cpp  similarity_scores.h  station_dataset.cpp  station_dataset.h  station_distance.cpp  station_distance.h  station_locator.cpp  station_locator.h  station_matcher.cpp  station_matcher.h  station_pair_score.cpp  station_pair_score.h  validate_prediction_similarity.cpp
NOAA_Inventory_Sort/: README.md  filter_ghcn_years.py  hub_station_candidates.csv  main.cpp  noaa_sort.cpp  noaa_sort.h  target_station_candidates.csv
Station_Engine_Server/: README.md  station_engine_server.cpp
cpp_scoring_engine/: README.md
docs/: artifact_quarantine_plan.md  deploy_cloud_run.md  generated_artifact_audit.md  hosted_demo.md  local_artifact_inventory.md  public_review_notes.md  release_checklist.md  research_script_inventory.md  reviewer_runbook.md  screenshots.md  v1_cleanup_plan.md
ml_reconstruction/: README.md
remote_jobs/: README.md  retrieve_alpine_results.sh  run_medium.sh  run_paloma_build_tables.sh  run_paloma_export_models.sh  run_paloma_export_models_highmem.sh  run_smoke.sh  (+8 more)
(+199 files in other folders)
