[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorado-river-basin-weather"
version = "0.1.0"
description = "NOAA weather station proxy and temperature reconstruction tools for the Colorado River Basin project."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
model = [
    "joblib>=1.3",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
terrain = [
    "numpy>=1.24",
    "Pillow>=10.0",
]
dev = [
    "pytest>=8.0",
]
native = [
    "pybind11>=2.12",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
    "tests",
    "weather_reconstruction_model/scripts/tests",
]
pythonpath = [
    "weather_reconstruction_model/scripts",
]
